<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2018 Eric Rybarczyk
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Road Trippy</string>
    <string name="app_label_create_trip">Road Trippy: Create a Trip</string>
    <string name="app_label_settings">Road Trippy: Settings</string>
    <string name="app_label_trip_detail">Road Trippy: Your Trip</string>
    <string name="app_label_trip_day">Road Trippy: Your Day</string>
    <string name="app_label_terms_of_use">Road Trippy: Terms of Use</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">Have a great trip!</string>

    <string name="menu_label_trip_plans">Trip Plans</string>
    <string name="menu_label_create_trip">Create a Trip</string>
    <string name="menu_label_past_trips">Past Trips</string>
    <string name="menu_label_settings">Settings</string>
    <string name="menu_label_sign_out">Sign Out</string>
    <string name="menu_label_edit_trip">Edit Trip</string>
    <string name="menu_label_archive_trip">Archive Trip</string>

    <string name="pref_daily_driving_hours_default">12</string>
    <string name="pref_key_daily_driving_hours">preference_daily_driving_duration</string>
    <string name="pref_home_location_title">Home Location</string>
    <string name="pref_driving_hours_title">Daily Driving Duration</string>
    <string name="pref_terms_of_use_title">User Data Privacy &amp; License Terms</string>
    <string name="pref_home_location_info">Set your Home as a trip starting point</string>
    <string name="pref_driving_hours_info">Drives over this limit will be split to separate days</string>
    <string name="pref_terms_of_use_info">Review the User Data Privacy and License Terms</string>
    <string name="pref_button_save_label">SAVE</string>

    <string name="message_no_default_trip_list_data">You have no trips to display</string>
    <string name="message_no_archived_trip_list_data">You have no archived trips to display</string>

    <string name="screen_heading_create_trip">Start planning your trip</string>
    <string name="screen_heading_default_trip_name">Trip Route Overview</string>

    <string name="input_trip_name_label">Trip name or short description</string>
    <string name="input_trip_departure_date_label">Departure date</string>
    <string name="input_trip_return_date_label">Return date</string>
    <string name="input_trip_origin_label">Starting from</string>
    <string name="input_trip_destination_label">Destination</string>
    <string name="input_trip_return_option_label">Include return driving directions</string>
    <string name="input_trip_next_button_label">NEXT</string>
    <string name="input_trip_origin_home_button_label">My Home</string>
    <string name="input_trip_origin_pick_button_label">Other</string>
    <string name="input_trip_name_sub_hint">This name will identify the trip throughout this app</string>
    <string name="trip_confirm_button_save_label">SAVE TRIP</string>

    <string name="dialog_trip_origin_picker_title">Where will you start?</string>

    <string name="map_select_location_instructions">Search or tap the map to choose a location</string>
    <string name="map_select_location_search_hint">Search…</string>
    <string name="map_select_location_button_search_label">SEARCH</string>
    <string name="map_select_location_button_save_label">DONE</string>
    <string name="map_home_location_button_save_label">SAVE</string>
    <string name="map_location_description_hint">Name this location</string>
    <string name="map_search_no_results_message">No results found. Please try again.</string>
    <string name="map_search_too_many_results_message">Too many results, please narrow your search.</string>
    <string name="map_search_call_error_message">Error: unable to perform search</string>
    <string name="map_directions_call_error_message">Error: unable to get directions</string>
    <string name="map_directions_failure">Unable to find Directions. Please adjust your Trip.</string>
    <string name="maps_api_indicator_ferry">ferry</string>

    <string name="input_trip_day_primary_description">Primary activity or event today</string>
    <string name="input_trip_day_secondary_notes">Enter additional notes here if you wish</string>
    <string name="trip_day_add_destination_button_label">ADD DESTINATION</string>
    <string name="trip_day_save_button_label">DONE</string>
    <string name="trip_day_destination_list_label">Destinations:</string>
    <string name="input_trip_day_destination">Add a destination for today</string>

    <string name="fa_icon_star">&#xf005;</string>
    <string name="fa_icon_trash">&#xf2ed;</string>
    <string name="fa_icon_back">&#xf359;</string>

    <!-- ContentDescription items-->
    <string name="aria_trip_item_image_description">Simple map image for trip</string>
    <string name="aria_nav_header_desc">Application Logo</string>
    <string name="aria_trip_overview_theme_image">Trip Overview Theme Image</string>
    <string name="aria_icon_get_directions">Get Directions Icon</string>
    <string name="aria_day_destination_button_map_search">Map Search Icon</string>
    <string name="aria_divider_line">divider line</string>

    <!-- words and abbreviations injected into generated strings -->
    <string name="word_for_TO">to</string>
    <string name="word_for_HOURS">Hours</string>
    <string name="abbreviation_for_HOURS">h</string>
    <string name="word_for_MINUTES">Minutes</string>
    <string name="abbreviation_for_MINUTES">m</string>
    <string name="word_for_UNKNOWN">Unknown</string>
    <string name="label_for_DRIVING_TIME">Driving Time:</string>
    <string name="word_for_HOME">Home</string>
    <string name="word_for_Day">Day</string>
    <string name="phrase_for_YourTrip">Your Trip</string>
    <string name="phrase_for_DrivingDay">Driving Day</string>
    <string name="phrase_for_ReturnDrive">Return Drive</string>
    <string name="phrase_for_PlanYourDay">Plan Your Day</string>
    <string name="phrase_for_EnjoyYourDay">enjoy your day</string>
    <string name="phrase_for_EnjoyYourDrive">enjoy your drive</string>

    <string name="error_device_location_null">Device location not found, please check your Location Settings.</string>
    <string name="error_create_trip_data_validation">Please provide all trip information</string>
    <string name="error_save_trip_day_validation">You must enter the Primary activity or event description</string>
    <string name="error_no_location_specified">Please search or tap the map to specify a location</string>
    <string name="error_home_location_preference_not_found">Please use the Settings menu to set your Home location</string>
    <string name="error_message_system_missing_google_maps">Unable to locate Google Maps on your device. Google Maps is required for Navigation features.</string>
    <string name="error_message_archived_trip_no_edit">Sorry, we do not allow editing of archived trips</string>
    <string name="error_message_data_lookup_exception">Unable to access data at this time</string>
    <string name="warning_message_no_network">No Network Available. App features are limited.</string>
    <string name="error_message_no_network_no_maps">No Network Available. Maps are not available.</string>
    <string name="error_log_message_no_network">No network available</string>
    <string name="error_driving_duration_value_invalid">Please enter a value between 1 and 24</string>

    <string name="widget_trip_countdown_label">Road Trippy: Countdown Widget</string>
    <string name="widget_trip_countdown_config_heading">Select a trip</string>
    <string name="widget_trip_countdown_subtitle">days until you drive!</string>
    <string name="widget_config_launch_app_button_label">Launch App</string>
    <string name="widget_config_require_login_message">Please launch the App and Log In before creating a widget</string>

    <!-- terms of use -->
    <string name="terms_intro_text">To continue using Road Trippy, please indicate your acceptance of the User Data Privacy and License Terms.</string>
    <string name="terms_revoke_text">You may revoke your prior acceptance of the User Data Privacy and License Terms. This will discontinue your use of Road Trippy.</string>
    <string name="terms_accept_button_label">I Accept</string>
    <string name="terms_cancel_button_label">Decline &amp; Close</string>
    <string name="terms_continue_button_label">Continue</string>
    <string name="terms_revoke_button_label">Revoke &amp; Close</string>

</resources>