<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2018 Eric Rybarczyk
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_trip_list"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/menu_label_trip_plans" />
        <item
            android:id="@+id/nav_create_trip"
            android:icon="@drawable/ic_action_add_circle_outline"
            android:title="@string/menu_label_create_trip" />
        <item
            android:id="@+id/nav_trip_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_label_past_trips" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings_outline"
            android:title="@string/menu_label_settings" />
    </group>

</menu>
