<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2018 Eric Rybarczyk
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DialogTitle"
        android:text="@string/dialog_trip_origin_picker_title"/>


    <Button
        android:id="@+id/home_origin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppButton"
        android:background="@drawable/button_shape"
        android:drawableEnd="@drawable/ic_menu_marker"
        android:text="@string/input_trip_origin_home_button_label" />

    <Button
        android:id="@+id/pick_origin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppButton"
        android:background="@drawable/button_shape"
        android:drawableEnd="@drawable/ic_menu_marker"
        android:text="@string/input_trip_origin_pick_button_label" />

</LinearLayout>